@@ -25,11 +25,7 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Fixture", "Source
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Fixture.Tests", "Tests\AllOverIt.Fixture.Tests\AllOverIt.Fixture.Tests.csproj", "{7EE59FE2-C4B7-4A02-B270-DFFE12D80EF8}"
 EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "DirectorySearchDemo", "Demos\AllOverIt\DirectorySearch\DirectorySearchDemo.csproj", "{CAF836AD-A2C8-4C4D-A659-AFD869C12745}"
-EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "FileSearchDemo", "Demos\AllOverIt\FileSearch\FileSearchDemo.csproj", "{F298A0AB-9FD5-46A2-B840-7927B79A722D}"
-EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "RepeatingTaskDemo", "Demos\AllOverIt\RepeatingTask\RepeatingTaskDemo.csproj", "{D31D421B-E4A5-49A4-A9F6-DFA09F0DE7DD}"
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Evaluator", "Source\AllOverIt.Evaluator\AllOverIt.Evaluator.csproj", "{9EF85E63-53DB-457F-AC54-29B54881F154}"
 EndProject
@@ -95,7 +91,15 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Serialization.New
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Benchmarking", "Benchmarking", "{17CD389D-25DF-4075-980B-96C1A77C779E}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "SerializationFilterBenchmarking", "Demos\AllOverIt\Benchmarking\SerializationFilterBenchmarking\SerializationFilterBenchmarking.csproj", "{CE75AD84-EC90-449D-9C97-3BBC2A62BD4F}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "SerializationFilterBenchmarking", "Demos\AllOverIt\Benchmarking\SerializationFilterBenchmarking\SerializationFilterBenchmarking.csproj", "{CE75AD84-EC90-449D-9C97-3BBC2A62BD4F}"
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Patterns", "Patterns", "{595F3EB1-3F3D-4942-9A5A-95CD8621607B}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "ChainOfResponsibilityDemo", "Demos\AllOverIt\ChainOfResponsibilityDemo\ChainOfResponsibilityDemo.csproj", "{62A3D0CF-E733-44E8-B396-99F130935D20}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "DirectorySearchDemo", "Demos\AllOverIt\DirectorySearchDemo\DirectorySearchDemo.csproj", "{1B67249E-FF5D-44C8-9D05-0A0CD40C82F6}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "RepeatingTaskDemo", "Demos\AllOverIt\RepeatingTaskDemo\RepeatingTaskDemo.csproj", "{A9F5B0CB-5E7E-413D-9CD0-1E19195DCB7B}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -119,18 +123,10 @@ Global
 		{7EE59FE2-C4B7-4A02-B270-DFFE12D80EF8}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{7EE59FE2-C4B7-4A02-B270-DFFE12D80EF8}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{7EE59FE2-C4B7-4A02-B270-DFFE12D80EF8}.Release|Any CPU.Build.0 = Release|Any CPU
-		{CAF836AD-A2C8-4C4D-A659-AFD869C12745}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{CAF836AD-A2C8-4C4D-A659-AFD869C12745}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{CAF836AD-A2C8-4C4D-A659-AFD869C12745}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{CAF836AD-A2C8-4C4D-A659-AFD869C12745}.Release|Any CPU.Build.0 = Release|Any CPU
 		{F298A0AB-9FD5-46A2-B840-7927B79A722D}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{F298A0AB-9FD5-46A2-B840-7927B79A722D}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{F298A0AB-9FD5-46A2-B840-7927B79A722D}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{F298A0AB-9FD5-46A2-B840-7927B79A722D}.Release|Any CPU.Build.0 = Release|Any CPU
-		{D31D421B-E4A5-49A4-A9F6-DFA09F0DE7DD}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{D31D421B-E4A5-49A4-A9F6-DFA09F0DE7DD}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{D31D421B-E4A5-49A4-A9F6-DFA09F0DE7DD}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{D31D421B-E4A5-49A4-A9F6-DFA09F0DE7DD}.Release|Any CPU.Build.0 = Release|Any CPU
 		{9EF85E63-53DB-457F-AC54-29B54881F154}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{9EF85E63-53DB-457F-AC54-29B54881F154}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{9EF85E63-53DB-457F-AC54-29B54881F154}.Release|Any CPU.ActiveCfg = Release|Any CPU
@@ -235,6 +231,18 @@ Global
 		{CE75AD84-EC90-449D-9C97-3BBC2A62BD4F}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{CE75AD84-EC90-449D-9C97-3BBC2A62BD4F}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{CE75AD84-EC90-449D-9C97-3BBC2A62BD4F}.Release|Any CPU.Build.0 = Release|Any CPU
+		{62A3D0CF-E733-44E8-B396-99F130935D20}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{62A3D0CF-E733-44E8-B396-99F130935D20}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{62A3D0CF-E733-44E8-B396-99F130935D20}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{62A3D0CF-E733-44E8-B396-99F130935D20}.Release|Any CPU.Build.0 = Release|Any CPU
+		{1B67249E-FF5D-44C8-9D05-0A0CD40C82F6}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{1B67249E-FF5D-44C8-9D05-0A0CD40C82F6}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{1B67249E-FF5D-44C8-9D05-0A0CD40C82F6}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{1B67249E-FF5D-44C8-9D05-0A0CD40C82F6}.Release|Any CPU.Build.0 = Release|Any CPU
+		{A9F5B0CB-5E7E-413D-9CD0-1E19195DCB7B}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{A9F5B0CB-5E7E-413D-9CD0-1E19195DCB7B}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{A9F5B0CB-5E7E-413D-9CD0-1E19195DCB7B}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{A9F5B0CB-5E7E-413D-9CD0-1E19195DCB7B}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -245,9 +253,7 @@ Global
 		{C167DD2C-B7E8-454E-8F29-05C87D1F6FD0} = {0C08FAE6-4CD9-4C7B-A849-EB0DB9BD1451}
 		{19080B7C-ABE3-43FC-A436-BF7BE67FEC20} = {FC8E8DB2-1299-44F4-A233-0EDCE225BB8C}
 		{7EE59FE2-C4B7-4A02-B270-DFFE12D80EF8} = {0C08FAE6-4CD9-4C7B-A849-EB0DB9BD1451}
-		{CAF836AD-A2C8-4C4D-A659-AFD869C12745} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
 		{F298A0AB-9FD5-46A2-B840-7927B79A722D} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
-		{D31D421B-E4A5-49A4-A9F6-DFA09F0DE7DD} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
 		{9EF85E63-53DB-457F-AC54-29B54881F154} = {FC8E8DB2-1299-44F4-A233-0EDCE225BB8C}
 		{093073B2-388C-4035-B9DE-38E8B23901E8} = {0C08FAE6-4CD9-4C7B-A849-EB0DB9BD1451}
 		{2C8BC761-AE3A-4111-B9FC-3E27D4BB15AA} = {FC8E8DB2-1299-44F4-A233-0EDCE225BB8C}
@@ -281,6 +287,10 @@ Global
 		{0107C0E4-5C83-41CA-9CA4-38AD71352079} = {FC8E8DB2-1299-44F4-A233-0EDCE225BB8C}
 		{17CD389D-25DF-4075-980B-96C1A77C779E} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
 		{CE75AD84-EC90-449D-9C97-3BBC2A62BD4F} = {17CD389D-25DF-4075-980B-96C1A77C779E}
+		{595F3EB1-3F3D-4942-9A5A-95CD8621607B} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
+		{62A3D0CF-E733-44E8-B396-99F130935D20} = {595F3EB1-3F3D-4942-9A5A-95CD8621607B}
+		{1B67249E-FF5D-44C8-9D05-0A0CD40C82F6} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
+		{A9F5B0CB-5E7E-413D-9CD0-1E19195DCB7B} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {19DD11B3-596E-4862-B5C4-1FFFFB173106}
