@@ -1,0 +1,7 @@
+﻿namespace ChainOfResponsibilityDemo
+{
+    public sealed class QueueMessage
+    {
+        public string Payload { get; set; }
+    }
+}
